--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "express": "^4.17.1",
     "inquirer": "^7.3.3",
     "ioredis": "^4.27.9",
+    "laravel-echo": "^1.11.2",
     "lodash": "^4.17.21",
     "request": "^2.88.2",
     "socket.io": "^4.0.2",
+    "sqlite3": "^5.0.2",
     "yargs": "^15.4.1"
   },
   "devDependencies": {
