--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "prepublish": "npm run build"
   },
   "dependencies": {
-    "colors": "^1.4.0",
+    "colors": "1.4.0",
     "dotenv": "^8.6.0",
     "express": "^4.17.1",
     "inquirer": "^7.3.3",
