--- a/package.json
+++ b/package.json
@@ -33,12 +33,13 @@
     "socket.io": "^4.0.2",
     "sqlite3": "^5.0.2",
     "tsc": "^2.0.4",
-    "yargs": "^15.4.1"
+    "yargs": "^15.4.1",
+    "typescript": "^3.9.10"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.172",
-    "@types/node": "^13.13.52",
-    "typescript": "^3.9.10"
+    "@types/node": "^13.13.52"
+
   },
   "peerDependecies": {
     "sqlite3": "^3.1.13"
