--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/tlaverdure/Laravel-Echo-Server.git"
+    "url": "https://github.com/INKsearch/laravel-echo-server.git"
   },
   "main": "dist/index.js",
   "keywords": [
@@ -19,7 +19,7 @@
   "scripts": {
     "build": "tsc",
     "dev": "tsc -w",
-    "prepublish": "yarn build"
+    "prepublish": "npm build"
   },
   "dependencies": {
     "colors": "1.4.0",
