--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "scripts": {
     "build": "tsc",
     "dev": "tsc -w",
-    "prepublish": "npm build"
+    "prepublish": "npm run build"
   },
   "dependencies": {
     "colors": "1.4.0",
@@ -31,7 +31,7 @@
     "lodash": "^4.17.21",
     "request": "^2.88.2",
     "socket.io": "^4.0.2",
-    "sqlite3": "^5.0.2",
+    "sqlite3": "^5.0.6",
     "tsc": "^2.0.4",
     "yargs": "^15.4.1",
     "typescript": "^3.9.10"
